--- a/app/templates/design/index.hbs
+++ b/app/templates/design/index.hbs
@@ -81,4 +81,4 @@
     </tr>
   </tbody>
 </table>
-<button class="btn btn-primary btn-lg pull-right">Enviar a cocina</button>
+<button class="btn btn-primary btn-lg pull-right">Enviar Orden</button>
