--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -15,7 +15,10 @@
           <div class="thumbnail menu-item">
             <img src="/images/burger-1.jpeg"/>
             <div class="caption">
-              <h3 class="text-center">{{item.name}} - $50.00</h3>
+              <h3 class="text-center">
+                <span>{{item.name}}</span> -
+                <span data-price>{{number-to-currency item.price}}</span>
+              </h3>
             </div>
           </div>
         </div>
