--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -13,7 +13,7 @@
         {{#each model as |item|}}
         <div class="col-md-6">
           <div class="thumbnail menu-item">
-            <img src="/images/burger-1.jpeg"/>
+            <img src="{{item.imageUrl}}"/>
             <div class="caption">
               <h3 class="text-center">
                 <span>{{item.name}}</span> -
