extract form-group component

--- a/app/templates/new-order.hbs
+++ b/app/templates/new-order.hbs
@@ -4,23 +4,25 @@
 
 <div class="row new-order-top-form">
   <div class="col-md-6">
-    <div class="form-group {{if model.errors.clientName 'has-error'}}">
+    {{#form-group errors=model.errors.clientName}}
       <label for="client">Nombre del cliente</label>
-      {{input class="form-control" id="client" value=model.clientName placeholder="Juanito, Pepito..."}}
-      {{#each model.errors.clientName as |error|}}
-      <span class="help-block">{{error.message}}</span>
-      {{/each}}
-    </div>
+      {{input
+      class="form-control"
+      id="client"
+      value=model.clientName
+      placeholder="Juanito, Pepito..."}}
+    {{/form-group}}
   </div>
 
   <div class="col-md-6">
-    <div class="form-group {{if model.errors.tableId 'has-error'}}">
+    {{#form-group errors=model.errors.tableId}}
       <label for="table">Número de mesa</label>
-      {{input class="form-control" id="table" value=model.tableId placeholder="M2, M3..."}}
-      {{#each model.errors.tableId as |error|}}
-      <span class="help-block">{{error.message}}</span>
-      {{/each}}
-    </div>
+      {{input
+      class="form-control"
+      id="table"
+      value=model.tableId
+      placeholder="M2, M3..."}}
+    {{/form-group}}
   </div>
 </div>
 
