--- a/app/templates/new-order.hbs
+++ b/app/templates/new-order.hbs
@@ -42,8 +42,8 @@
           <div class="input-group">
             <input value="{{item.quantity}}" type="text" class="form-control" width="3" data-quantity>
             <div class="input-group-btn">
-              <button class="btn btn-default" type="button">+</button>
-              <button class="btn btn-default" type="button">-</button>
+              <button class="btn btn-default" type="button" {{action "incrementQuantity" item}}>+</button>
+              <button class="btn btn-default" type="button" {{action "decrementQuantity" item}}>-</button>
             </div>
           </div>
         </td>
