--- a/app/templates/new-order.hbs
+++ b/app/templates/new-order.hbs
@@ -12,5 +12,14 @@
       {{/each}}
     </div>
   </div>
+  <div class="col-md-6">
+    <div class="form-group {{if model.errors.tableId 'has-error'}}">
+      <label for="table">Número de mesa</label>
+      {{input value=model.tableId class="form-control" id="table" placeholder="M1, M2..."}}
+      {{#each model.errors.tableId as |error|}}
+        <span class="help-block">{{error.message}}</span>
+      {{/each}}
+    </div>
+  </div>
 </div>
 <button id="send_order" class="btn btn-primary btn-lg pull-right" {{action "sendOrder"}}>Enviar Orden</button>
