Waiter sees the order's total

--- a/app/templates/new-order.hbs
+++ b/app/templates/new-order.hbs
@@ -62,6 +62,22 @@
         {{/if}}
       </tr>
     {{/each}}
+
+    <tr class="row">
+      <td class="col-md-4"></td>
+      <td class="col-md-4 text-right">Neto:</td>
+      <td id="order_net_total" class="col-md-4 text-right">{{number-to-currency model.netTotal}}</td>
+    </tr>
+    <tr class="row">
+      <td class="col-md-4"></td>
+      <td class="col-md-4 text-right">IVA:</td>
+      <td id="order_iva" class="col-md-4 text-right">{{number-to-currency model.iva}}</td>
+    </tr>
+    <tr class="row">
+      <th class="col-md-4"></th>
+      <th class="col-md-4 text-right">Neto + IVA:</th>
+      <td id="order_total" class="col-md-4 text-right">{{number-to-currency model.total}}</td>
+    </tr>
   </tbody>
 </table>
 
