--- a/app/templates/new-order.hbs
+++ b/app/templates/new-order.hbs
@@ -26,19 +26,31 @@
     </thead>
     <tbody>
       {{#each model.items as |item|}}
-        <tr class="row" data-order-item>
-          <td class="col-md-4">{{item.name}}</td>
-          <td class="col-md-4 text-center">
-            <div class="input-group">
-              <input value="{{item.quantity}}" type="number" class="form-control" width="3" data-quantity>
-              <div class="input-group-btn">
-                <button class="btn btn-default" type="button" {{action "incrementQuantity" item}}>+</button>
-                <button class="btn btn-default" type="button" {{action "decrementQuantity" item}}>-</button>
-              </div>
+      <tr class="row" data-order-item>
+        {{#if item.quantity}}
+        <td class="col-md-4">{{item.name}}</td>
+        <td class="col-md-4 text-center">
+          <div class="input-group">
+            <input value="{{item.quantity}}" type="number" class="form-control" width="3" data-quantity>
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="button" {{action "incrementQuantity" item}}>+</button>
+              <button class="btn btn-default" type="button" {{action "decrementQuantity" item}}>-</button>
             </div>
-          </td>
-          <td class="col-md-4 text-right" data-total>{{number-to-currency item.total}}</td>
-        </tr>
+          </div>
+        </td>
+        <td class="col-md-4 text-right" data-total>{{number-to-currency item.total}}</td>
+        {{else}}
+        <td class="col-md-12 text-center" colspan="3">
+          <div class="alert alert-warning new-order-remove-item-warning">
+            <p>¿Quieres remover este elemento?</p>
+            <p>
+              <button class="btn btn-default" {{action "removeItemCancelation" item}}>Cancelar</button>
+              <button class="btn btn-default btn-soft-danger" {{action "removeItem" item}}>Remover</button>
+            </p>
+          </div>
+        </td>
+        {{/if}}
+      </tr>
       {{/each}}
     </tbody>
   </table>
